🛠️ Improve Swagger and Student Controllers : Mejoras en swagger.yaml, studentController.js y studentRoutes.js
